<resources>
    <string name="Hint.newPassword">新密码</string>
    <string name="Hint.password">密\t\t码</string>
    <string name="Helper.password">请输入密码</string>
    <string name="Hint.NickName">昵称</string>
    <string name="Helper.NickName">昵称长度不能超过10位</string>
    <string name="Tv.Loading">加载中...</string>
    <string name="Tv.ReLoad">重新加载</string>
    <string name="Tv.Loading.Playbak">正在准备回放数据...</string>
    <string name="Gander.Man">男</string>
    <string name="Gander.Women">女</string>
    <string name="Load.loading">正在加载...</string>
    <string name="Load.waiting">请稍后···</string>
    <string name="down_state">正在下载：%s</string>
    <string name="Btn.AddFriend">加好友</string>
    <string name="Btn.Agree">同意</string>
    <string name="Tv.ImageCut.Title">缩放和剪切</string>
    <string name="Btn.ImageCut.CutImage">确定</string>
    <string name="Btn.WxShare.Cancel">取消</string>
    <string name="Btn.WxShare.GoShare">去微信粘贴</string>
    <string name="Btn.Tourist.Login">登录</string>
    <string name="Tv.Tourist.Friends">加入跑跑看, 可以体验全新的社交功能</string>
    <string name="Tv.Tourist.Groups">加入跑跑看, 可以体验全新的社交功能</string>
    <string name="Tv.Tourist.Dynamic">加入跑跑看,可以查看好友的动态</string>
    <string name="Tv.Tourist.Settings">加入跑跑看,体验强大的个人数据分析</string>
    <string name="Unit.Km">公里</string>
    <string name="Term.Heartrate">心率</string>
    <string name="Term.Pace">配速</string>
    <string name="Term.AvgPace">平均配速</string>
    <string name="CheckBox.Dialog">我要当领跑</string>
    <string name="Spinner.Dialog">我的配速</string>
    <string name="Btn.Dialog.Cancel">取消</string>
    <string name="Btn.Dialog.Confirm">确定</string>
    <string name="Btn.Dialog.SignUp">报名</string>
    <string name="Btn.SplashActivity.Start">立即体验</string>
    <string name="Tv.SplashActivity.fragment.one.title">全新的我</string>
    <string name="Tv.SplashActivity.fragment.two.title">跑步分析</string>
    <string name="Tv.SplashActivity.fragment.three.title">实时互动</string>
    <string name="Tv.SplashActivity.fragment.four.title">跑团助手</string>
    <string name="Tv.SplashActivity.fragment.one.explain">你跑过的路不会欺骗你，你流过的汗水不会白流 \n 赢取你战利品的时刻到了！ </string>
    <string name="Tv.SplashActivity.fragment.two.explain">你的心跳，我知道；\n你的前进，我记录；\n你想要的，我都给你。</string>
    <string name="Tv.SplashActivity.fragment.three.explain">分享你的精彩到朋友圈，让跑步从此不再孤单</string>
    <string name="Tv.SplashActivity.fragment.four.explain">约跑、腐败、打卡、统计还有什么我没有想到的吗？</string>
    <string name="Tv.MainActivity.Tab.TextView.Dynamic">动态</string>
    <string name="Tv.MainActivity.Tab.TextView.Friend">好友</string>
    <string name="Tv.MainActivity.Tab.TextView.Run">记录</string>
    <string name="Tv.MainActivity.Tab.TextView.Group">跑团</string>
    <string name="Tv.MainActivity.Tab.TextView.Me">我</string>
    <string name="Tv.LoginActivity.title">手机号码登录</string>
    <string name="Hint.LoginActivity.phonenum">手机号</string>
    <string name="Helper.LoginActivity.phonenum">请输入手机号码</string>
    <string name="Button.LoginActivity.Login">登录</string>
    <string name="Button.LoginActivity.ForgetPsw">忘记密码</string>
    <string name="Button.LoginActivity.Regist">新用户注册</string>
    <string name="Button.LoginActivity.LoginByWxin">微信登录</string>
    <string name="Button.LoginActivity.LoginByGuest">立即奔跑</string>
    <string name="Button.LoginActivity.changeuser">切换帐号</string>
    <string name="Tv.LoginActivity.EditLayout.Title.phonenum">手机号</string>
    <string name="Tv.LoginActivity.EditLayout.Title.password">密\t\t码</string>
    <string name="EditText.LoginActivity.EditLayout.phone.Hint">请输入手机号码</string>
    <string name="EditText.LoginActivity.EditLayout.password.Hint">请输入密码</string>
    <string name="Title.RegistActivity">注册</string>
    <string name="Title.RegistActivityAddInfo">完善资料</string>
    <string name="Tip.RegistActivity">请输入你的手机号</string>
    <string name="Hint.RegistActivity.Phonenum">手机号</string>
    <string name="Helper.RegistActivity.Phonenum">请填写手机号码</string>
    <string name="Button.RegistActivity.regist">注册</string>
    <string name="Tv.RegistActivity.Privacy">点“注册”按钮即表示你同意</string>
    <string name="Button.RegistActivity.Privacy">《跑跑看 用户隐私协议》</string>
    <string name="Title.ForgetPswInputPhoneNumActivity">忘记密码</string>
    <string name="Tv.ForgetPswInputPhoneNumActivity.Title">通过短信验证码登录</string>
    <string name="Hint.ForgetPswInputPhoneNumActivity.Phonenum">手机号</string>
    <string name="Helper.ForgetPswInputPhoneNumActivity.Phonenum">请填写手机号码</string>
    <string name="Button.ForgetPswInputPhoneNumActivity.Next">下一步</string>
    <string name="Title.ForgetPswInputCodeActivity">忘记密码</string>
    <string name="Tv.ForgetPswInputCodeActivity.Title">短信验证码已发送，请填写验证码</string>
    <string name="Hint.ForgetPswInputCodeActivity.Phonenum">手机号</string>
    <string name="Helper.ForgetPswInputCodeActivity.Phonenum">请填写手机号码</string>
    <string name="Hint.ForgetPswInputCodeActivity.Code">验证码</string>
    <string name="Helper.ForgetPswInputCodeActivity.Code">请输入验证码</string>
    <string name="Button.ForgetPswInputCodeActivity.Commit">提交</string>
    <string name="Button.ForgetPswInputCodeActivity.getCodeAgain">收不到验证码?</string>
    <string name="Title.PrivacyActivity">用户隐私协议</string>
    <string name="Tv.PrivacyActivity.body">\t"跑跑看"用户隐私协议版权所属上海互韦涵信息技术有限公司（简称“我们”）。“跑跑看”是一款专业跑步的应用软件。依据法律的规定，我们将在特定情形下收集、使用、保存和披露您的个人信息。以下条款描述了我们如何收集、使用、保存和披露您的个人信息。\n \t1、个人信息的收集\n \t\t1.1 个人信息\n \t\t\t我们使用、保存、使用和披露个人信息是为了帮助您创建账户、识别用户、回应反馈和邮件等行为。"跑跑看"会向您提供关于专业跑步方面服务、发送活动、调查、优惠和促销信息以及其他宣传材料，以为您提供更好的服务。\n\n \t\t1.2 为实现服务目的而收集\n \t\t\t您无需用户账户即可试用“跑跑看”跑步软件。如果您想使用“跑跑看”跑步软件更多功能，您必须注册为“跑跑看”跑步软件用户并且于注册页面上提供相关的个人信息。您必须承诺和保证：\n \t\t\t1.2.1 为实现“跑跑看”的服务目的，“跑跑看”会通过技术手段收集您的个人信息，通过技术手段所收集的个人信息仅限于您的地理位置信息、电话号码、手机通讯录、以及社交账号等使用"跑跑看"跑步软件所必需的信息。\n \t\t\t1.2.2 “跑跑看”跑步软件采取多平台异步开发方式，支持Android以及iOS等多类操作系统的使用。当您使用iOS以及Android系统时，您需要输入您的社交账号或手机号码进行绑定使用。在您通过各种手机操作系统使用“跑跑看”跑步软件的过程中，“跑跑看”跑步软件所收集的信息仅限于您同意使用“跑跑看”跑步软件基本服务所必需的信息。\n \t\t\t1.2.3 经过您的允许，“跑跑看”跑步软件将分析您的手机通讯录和已绑定的社交账号，来帮助您寻找已经在使用“跑跑看”的朋友。“跑跑看”跑步软件通过高强度、不可逆的加密算法（将收集到的号码加密成为一系列不可解密的字符串）来加密您的通讯录信息，并依据该加密后的信息进行好友匹配的操作。\n \t\t\t1.2.4 “跑跑看”跑步软件会保存您使用“跑跑看”跑步软件时产生的所有运动数据，其中包括您的地理位置信息、时间、轨迹、运动数据等。\n\n \t\t1.3 用户提供\n \t\t\t1.3.1 如果您需要使用更多“跑跑看”跑步软件功能，例如将运动数据分享到微博、微信等其他网站或完善您的个人信息，以便享受更多的服务或更加便捷的联系好友，您需要完善您的个人信息，如”昵称“、”头像“或绑定您的其他社交网站账号。\n \t\t\t1.3.2
        您提供的信息，“跑跑看”跑步软件将最大限度尽合理之商业义务进行保密。经过您的同意，“跑跑看”跑步软件将会向您提供活动、资讯、版本升级等服务。\n\n \t\t1.4 “跑跑看”跑步软件允许用户之间发送信息和其他合法内容。如果您将信息或其他内容发送给另一个用户，“跑跑看”服务器将会为您保存此信息/内容，并将此信息/内容发送给该用户。\n\n \t\t1.5 您提供信息的其他方式\n \t\t\t我们将采用其他方式（例如：电子邮件、信息下载、购买产品或服务、用户支持、反馈以及调查表）来收集您的个人信息。如果您将个人信息填写在其他开放的平台上，其他用户可能会获知您的信息。\n\n \t\t1.6 您的其他信息\n \t\t\t为了便于您使用"跑跑看"跑步软件，我们的服务器将会收集关于您的移动通讯设备的信息，例如型号、设备ID、互联网协议地址、您访问的时间和地点、路由数据包、信息发送人和接收数据（但不是信息本身），以及其他类似的特征记录。我们将使用Cookies和类似统一资源定位器（URL）的导航数据来收集您访问的时间和日期、搜索和查看的信息等。\n\n \t2、个人信息的使用\n \t\t2.1 您的个人信息将只在本隐私政策及提前通知您的更新的政策所载明的范围内使用[不会用于其它目的]。\n \t\t2.2 匿名汇总统计数据不是"跑跑看"跑步软件所定义的个人用户信息，我们将为多种目的，包括但不限于分析和使用模式的报告等，来保存和使用此类信息。"跑跑看"跑步软件有权以任何目的或单方面许可第三方使用和披露匿名汇总统计数据。\n\n \t3、个人信息的披露\n \t\t3.1 除非本隐私政策载明的有限披露，我们会妥善保存您的个人信息并不会泄露客户名单。\n \t\t3.2 您于此授权，以下情形下，我们将会向第三方披露您的个人信息而无需通过您的同意：\n \t\t\t3.2.1 如果我们披露这些信息是用来识别、联系或向可能对我们的权利或财产、网站用户或者其他任何人（包括其他任何人的权利和财产）造成损害之行为提起诉讼之必要；\n \t\t\t3.2.2 法律调查之必要；\n \t\t\t3.2.3 此类披露是法律规定或应向我们送达的传票或其他执法部门发出的令状之必要。\n\n \t4、安全\n \t\t4.1 对我们来说，个人信息的安全非常重要。我们将尽合理的商业努力保障您的个人信息安全，并实施合理的商业程序限制非授权访问、使用或者披露您的个人信息。尽管采取上述措施，但是您应当知晓"跑跑看"跑步软件不能完全避免与个人信息相关的安全危险。\n\n \t5、您应当协助我们以保护您的个人信息安全。例如，不要泄露您的个人密码。\n\n \t6、本隐私政策的修订\n \t\t6.1
        本隐私政策容许调整，如果我们对使用您的个人信息方法做出任何实质性调整，我们将通过您提供的手机号码用短消息通知您。\n \t\t6.2 我们发出的包含此类变更通知的短消息毫无疑问的组成上述变更通知的有效部分。如果您不希望我们改变对您个人信息的使用，您必须早于您期望停止使用我们的账户之前通知我们。您继续使用和"跑跑看"跑步软件的行为，将被视为您知晓并同意受通知中此类变更条款的约束。\n\n \t7、年龄限制\n \t\t我们鼓励父母或监护人指导未满十八岁的未成年人使用我们的服务。我们建议未成年人鼓励他们的父母或监护人阅读本《隐私政策》，并建议未成年人在提交个人信息之前寻求父母或监护人的同意和指导。\n
    </string>
    <string name="Title.RegistInputSMSCodeActivity">注册</string>
    <string name="Hint.RegistInputSMSCodeActivity.PhoneNum">手机号</string>
    <string name="Hint.RegistInputSMSCodeActivity.Code">验证码</string>
    <string name="Helper.RegistInputSMSCodeActivity.Code">请输入验证码</string>
    <string name="Button.RegistInputSMSCodeActivity.Commit">提交</string>
    <string name="Button.RegistInputSMSCodeActivity.getCodeAgain">收不到验证码?</string>
    <string name="Tv.RegistInputSMSCodeActivity.Title">短信验证码已发送，请填写验证码</string>
    <string name="Tv.SafeResetPassword.Title">为了保障你的数据安全,修改密码前请填写原密码。</string>
    <string name="Title.FinishRegist">注册资料</string>
    <string name="Hint.FinishRegist.phoneNum">手机号</string>
    <string name="Helper.FinishRegist.phoneNum">请输入手机号</string>
    <string name="Tip.FinishRegist.MustInput">(必填)</string>
    <string name="Hint.FinishRegist.NickName">昵\t\t称</string>
    <string name="Helper.FinishRegist.NickName">请输入昵称</string>
    <string name="Button.FinishRegist.Regist">注册</string>
    <string name="Title.WxBindMobileActivity">绑定手机号</string>
    <string name="Helper.WxBindMobileActivity.phone.num">请输入手机号码</string>
    <string name="Hint.WxBindMobileActivity.phone.num">手机号</string>
    <string name="Hint.WxBindMobileActivity.code">验证码</string>
    <string name="Helper.WxBindMobileActivity.code">请输入验证码</string>
    <string name="Button.WxBindMobileActivity.getCode">获取验证码</string>
    <string name="Button.WxBindMobileActivity.bind.phone">立即绑定</string>
    <string name="Msg.WxBindMobileActivity.getCode">短信已发送</string>
    <string name="Tv.PreperRunActivity.title">准备跑</string>
    <string name="Tv.PreperRunActivity.Gps.Search">定位中..</string>
    <string name="Tv.PreperRunActivity.Gps.Ok">开始跑步吗？</string>
    <string name="Button.PreperRunActivity.Start">开始</string>
    <string name="Button.PreperRunActivity.Cancel">撤销</string>
    <string name="Tv.PreperRunActivity.tip">是否立即开始跑步？</string>
    <string name="folder_all">所有图片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">启动摄像头失败</string>
    <string name="msg_amount_limit">超出最大限制</string>
    <string name="select_mode">选择模式</string>
    <string name="mode_single">单选</string>
    <string name="mode_multi">多选</string>
    <string name="max_select_amount">最大选择数量</string>
    <string name="hint_default_amount">默认数量为9</string>
    <string name="enable_camera">是否启用照相机</string>
    <string name="enable">是</string>
    <string name="disable">否</string>
    <string name="go_select">图片选择</string>
    <string name="btn_finish">完成</string>
    <string name="Tv.MultiImageSelectorActivity.title">选择照片</string>
    <string name="Title.LoginResetPwdActivity">重设密码</string>
    <string name="Hint.LoginResetPwdActivity.Confirm.psw">确认密码</string>
    <string name="Helper.LoginResetPwdActivity.Confirm.psw">请验证密码</string>
    <string name="Hint.LoginResetPwdActivity.psw">密\t\t\t 码</string>
    <string name="Helper.LoginResetPwdActivity.psw">请输入密码</string>
    <string name="Button.LoginResetPwdActivity.Commit">完成</string>
    <string name="Button.LoginResetPwdActivity.Cancel">取消设置</string>
    <string name="T.LoginResetPwdActivity.Success">修改密码成功!</string>
    <string name="Tv.UserFragment.title">我的主页</string>
    <string name="Tv.FriendFragment.title">好友</string>
    <string name="Tv.GroupFragment.title">跑团</string>
    <string name="Tv.DynamicFragment.title">动态</string>
    <string name="Tv.Tourist.UserFragment.title">个人主页</string>
    <string name="Menu.Action.Settings">设置</string>
    <string name="Menu.Action.AddFriends">添加好友</string>
    <string name="Tv.LocalUserFragment.My.Friend">我的好友</string>
    <string name="Tv.LocalUserFragment.My.Group">我的跑团</string>
    <string name="Tv.LocalUserFragment.My.Medal">我的奖牌</string>
    <string name="Tv.LocalUserFragment.Medal.Rule">奖牌规则</string>
    <string name="Tv.LocalUserFragment.No.Medal">暂无奖牌</string>
    <string name="Tv.LocalUserFragment.Go.Run">快去跑步吧！</string>
    <string name="tv_history_basicinfo_average_time_speed">平均配速</string>
    <string name="tv_history_basicinfo_max_time_speed">最快配速</string>
    <string name="tv_history_basicinfo_km">公里</string>
    <string name="tv_history_basicinfo_time_speed">配速</string>
    <string name="tv_history_basicinfo_heartbeat">心率</string>
</resources>